# portfolio

./: .rsw.json  README.md  fix-new-urls.js  fix-wasm.js  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
content/: works.json
content/profile/: about_me_desc.txt  without_desc_profile.json
contents/profile/: about_me_desc.txt  main_meta_property.json  skills_desc.txt  without_desc_profile.json  works.json
contents/works/: py_workdays.md  rikou_meitan.md  ssii_thesis.md  test.md  tracking_annotation.md  trading_system.md
src/: app.css  app.html
src/lib/: convert_markdown.ts  darkmode_store.ts  meta_property.ts  profile.ts  wasm_app.ts  work.ts
src/lib/components/share/: DarkToggleSwitch.svelte  FixedSideMenu.svelte  Footer.svelte  Header.svelte  Seo.svelte  SvgWrapper.svelte
src/lib/components/share/svgs/: DarkSvg.svelte  GithubSvg.svelte  HomeSvg.svelte  MailSvg.svelte  QiitaSvg.svelte  TwitterSvg.svelte  WantedlySvg.svelte  svg_icon.css
src/lib/wasm/: Cargo.toml
src/lib/wasm/pkg/: package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/lib/wasm/src/: canvas_app.rs  dom_utils.rs  lib.rs  rand_ball.rs
src/routes/: __error.svelte  __layout.svelte  about.svelte  index.json.ts  index.svelte
src/routes/works/: [slug].json.ts  [slug].svelte  index.json.ts
