[package]
name = "wasm"
version = "0.1.0"
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78", features = ['serde-serialize']}
wee_alloc = "0.4.5"
rand = {version = "0.8.4", features = ["getrandom"]}
getrandom = {version = "*", features = ["js"]}
rand_distr = "0.4.2"
palette = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
#opt-level = "z"
opt-level = 3
overflow-checks = false
lto = true
#codegen-units = 1

[dependencies.web-sys]
version = "0.3.55"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'HtmlCanvasElement',
    'Window',
]